# ComfyUI-FaceChain

./: README.md  README_zh-CN.md  __init__.py  pyproject.toml  requirements.txt  requirements_face.txt
comfyui/: __init__.py  model_holder.py  nodes.py  style_loader_node.py
comfyui/utils/: convert_utils.py  img_utils.py
facechain/: model_holder.py  nodes.py  style_loader_node.py
facechain/common/: crop.py  model_processor.py
facechain/utils/: batch_covert_utils.py  config.py  convert_utils.py  img_utils.py  install.py
js/: facechain-apperance.js
workflow/: dev_workflow.json  develop_work_flow.json  devworlflow.json
